# app-lib-py

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  all-documents.html  app_lib_py.ClassCurves.Curve.html  app_lib_py.ClassCurves.Exponential.html  app_lib_py.ClassCurves.Quadratic.html  app_lib_py.ClassCurves.html  app_lib_py.ModulePredict.html  app_lib_py.html  citation.cff  classIndex.html  dev.md  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  requirements.txt  requirements_lib.txt  searchindex.json  setup.cfg  undoccedSummary.html
.github/scripts/: release.py
.github/workflows/: docker.yml  lint_style.yml  publish.yml  pydoctor.yml  pypi_publish.yml  pytest_app.yml  pytest_lib.yml  release.yml
app/: home.py
app/pages/: 1_installation.py  2_example.py  3_use_template.py
app/tests/use_cases/: test_add_curve.py
docs/: docs.md
lib/: pyproject.toml  requirements.txt  setup.cfg
lib/src/app_lib_py/: ClassCurves.py  ModulePredict.py
lib/tests/utility/: test_curves.py
src/: README.md
src/tests/speed/: help_speed.py  speed_log.csv  test_dummy.py
src/tests/speed/data/: speed_log.csv
src/tests/utility/: test_curves.py
