[metadata]
name = app_lib_py
author = Rachel Alcraft
author_email = rachelalcraft@gmail.com
description = Example library for scientific software.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RachelAlcraft/app-lib-py
project_urls =
    Bug Tracker = https://github.com/RachelAlcraft/app-lib-py/issues
    Documentation = https://rachelalcraft.github.io/app-lib-py
    Application demo = https://app-lib-py.streamlit.app
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
