[metadata]
name = app-lib-py
description = Demo of a a scientific software library
long_description_content_type = text/markdown
url = https://github.com/RachelAlcraft/app-lib-py
project_urls =
    Bug Tracker = https://github.com/RachelAlcraft/app-lib-py/issues
    Changelog = https://github.com/RachelAlcraft/app-lib-py/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    app_lib_py = app_lib_py.app:entry_point
