[metadata]
name = app_lib_py
#version = 0.0.8
author = Rachel Alcraft
author_email = rachelalcraft@gmail.com
description = Example library for scientific software.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RachelAlcraft/app-lib-py
project_urls =
    Bug Tracker = https://github.com/RachelAlcraft/app-lib-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
